# Projeto-Docker-Django

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.agent/system/: system-design.html
djangoapp/setup/: settings.py  urls.py
dotenv_files/: .env-example
scripts/: wait_psql.sh
src/: funcoes-exemplo.py
src/app/: __init__.py
src/app/home/: urls.py  views.py
src/app/user/: admin.py  apps.py  forms.py  models.py  singnals.py  tests.py  urls.py  views.py
src/app/user/migrations/: 0001_initial.py
src/core/: settings.py  urls.py
src/static/: README.md
src/static/css/: design-system.css  layout.css
src/static/js/: main.js
src/templates/: README.md  base.html  index.html
