[project]
name = "projeto-docker-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.2,<6.1",
    "gunicorn>=20.1.0",
    "psycopg2-binary>=2.9.6",
    "python-dotenv>=1.2.2",
    "qrcode[pil]>=8.0",
    "sqlparse>=0.5.5",
]
